--- a/app/views/forms/housing/CBLNI.html
+++ b/app/views/forms/housing/CBLNI.html
@@ -9,8 +9,10 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-
-     
+      <h1 class="govuk-heading-l">
+          Choice Base Letting
+      </h1>
+    
 {% from "radios/macro.njk" import govukRadios %}
 {% from "input/macro.njk" import govukInput %}
 
@@ -25,8 +27,6 @@
 }) }}
 {% endset -%}
 
-
-
 {{ govukRadios({
   idPrefix: "has-ni-conditional",
   name: "has-ni",
@@ -34,7 +34,7 @@
     legend: {
       text: "Do you have a National Insurance number?",
       isPageHeading: true,
-      classes: "govuk-fieldset__legend--l"
+      classes: "govuk-fieldset__legend--m"
     }
   },
   hint: {
@@ -60,8 +60,18 @@
         href: "/forms/housing/CBLaboutyou.html",
         classes: "button-primary"
       }) }}
-
     </div>
 </div>
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>the actual checkbox doesn't work (no feedback provided)</li>
+      <li>we could use radio buttons as above with a question - to be validated by Housing and Sharon</li>
+      <li>we could provide guidance about NI as above (to be validated)</li>
+      <li>CHECK if this is ok with GDPR: <a href="https://design-system.service.gov.uk/patterns/national-insurance-numbers/
+        " target="_blank" rel="noopener" >about using the NI</a>: <strong>You shouldn’t use National Insurance numbers to verify a user’s identity.</strong></li>
+    </ul>
+  </div>
+
 
 {% endblock %}
