--- a/app/views/forms/housing/CBLbedroom.html
+++ b/app/views/forms/housing/CBLbedroom.html
@@ -10,42 +10,100 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        How many bedrooms can your household currently use?
+          Choice Based Letting
       </h1>
+      <h2 class="govuk-heading-m">
+        We need to know how many bedrooms your household currently use.
+      </h2>
 
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h3 class="govuk-fieldset__heading">
-              Enter a number for each:
-            </h3>
-        </legend>
+      {% from "radios/macro.njk" import govukRadios %}
 
+      {{ govukRadios({
+        classes: "govuk-radios--inline",
+        idPrefix: "double",
+        name: "double",
+        fieldset: {
+          legend: {
+            text: "How many are double bedrooms?",
+            isPageHeading: true,
+            classes: "govuk-fieldset__legend--s"
+          }
+        },
+        items: [
+          {
+            value: "0",
+            text: "0"
+          },
+          {
+            value: "1",
+            text: "1"
+          },
+          {
+            value: "2",
+            text: "2"
+          },
+          {
+            value: "3",
+            text: "3"
+          },
+          {
+            value: "4 or more",
+            text: "4 or more"
+          }
+        ]
+      }) }}
 
+      {{ govukRadios({
+        classes: "govuk-radios--inline",
+        idPrefix: "single",
+        name: "single",
+        fieldset: {
+          legend: {
+            text: "How many are single bedrooms?",
+            isPageHeading: true,
+            classes: "govuk-fieldset__legend--s"
+          }
+        },
+        items: [
+          {
+            value: "0",
+            text: "0"
+          },
+          {
+            value: "1",
+            text: "1"
+          },
+          {
+            value: "2",
+            text: "2"
+          },
+          {
+            value: "3",
+            text: "3"
+          },
+          {
+            value: "4 or more",
+            text: "4 or more"
+          }
+        ]
+      }) }}
 
-        <div class="govuk-date-input" id="dob">
-          <div class="govuk-date-input__item">
-            <div class="govuk-form-group">
-              <label class="govuk-label govuk-date-input__label" for="dob-day">
-                Single bedrooms
-              </label>
-              <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-day" name="dob-day" type="number" pattern="[0-9]*">
-            </div>
-          </div>
-          <br>
-          <div class="govuk-date-input__item">
-            <div class="govuk-form-group">
-              <label class="govuk-label govuk-date-input__label" for="dob-month">
-                Double bedrooms
-              </label>
-              <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-month" name="dob-month" type="number" pattern="[0-9]*">
-            </div>
-          </div>
-        </div>
+      {% from "textarea/macro.njk" import govukTextarea %}
+
+      {{ govukTextarea({
+        name: "more-detail",
+        id: "more-detail",
+        classes: "govuk-!-width-two-thirds",
+        label: {
+          text: "Add any other information about bedrooms we might need to know about"
+        }
+      }) }}
   
 
       {% from "button/macro.njk" import govukButton %}
 
       {{ govukButton({
-        text: "End for now - More coming soon",
+        text: "End for now",
         classes: "button-primary"
       }) }}
 
