--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        Choice Base Letting
+        Choice Based Letting
       </h1>
       <p>
           If you need help at anytime you can contact our office at ....  
@@ -48,6 +48,7 @@
       <li>Remove the privacy statement on every page as it's on the footer. Might have to be on this page though.</li>
       <li>Back button: only 1 on each page and at the top</li>
       <li>this form will be challenging to complete, no Javascript will make it even worse, might need a specific warning</li>
+      <li><strong>some of the changes suggested will impact the error messages. They will need to be changed too!</strong></li>
     </ul>
   </div>
 
