--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -222,3 +222,11 @@ body p {
     // display: none
 }
 
+// -------------------------------------------- CBL------------------------------------------------- //
+
+#CBLperson2, #CBLperson3, #CBLperson4, #CBLperson5, #CBLperson6, #CBLchild2, #CBLchild3, {
+    display: none;
+}
+hr.erc {
+    border-top: 2px solid $erc-text-blue;
+}
