--- a/app/views/forms/housing/CBLpostcode.html
+++ b/app/views/forms/housing/CBLpostcode.html
@@ -9,56 +9,73 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-    {% from "radios/macro.njk" import govukRadios %}
-    {% from "input/macro.njk" import govukInput %}
-    
-    {% set postcodeHtml %}
-    {{ govukInput({
-      id: "postcode",
-      name: "postcode",
-      classes: "govuk-!-width-one-third",
-      label: {
-        text: "Enter your postcode"
-      }
-    }) }}
-    {% endset -%}
-    
-    
-    
-    {{ govukRadios({
-      idPrefix: "has-add-conditional",
-      name: "has-add",
-      fieldset: {
-        legend: {
-          text: "Do you have a fixed address?",
-          isPageHeading: true,
-          classes: "govuk-fieldset__legend--l"
-        }
-      },
-      hint: {
-        text: "This is where you live now, even if you are living with friends, family or somewhere else."
-      },
-      items: [
-        {
-          value: "yes",
-          text: "Yes",
-          conditional: {
-            html: postcodeHtml
+      <h1 class="govuk-heading-l">
+          Choice Based Letting
+      </h1>
+      <form class="form" method="post">
+
+        {% from "radios/macro.njk" import govukRadios %}
+        {% from "textarea/macro.njk" import govukTextarea %}
+        
+        {% set postcodeHtml %}
+        {{ govukTextarea({
+          id: "postcode",
+          name: "postcode",
+          classes: "govuk-!-width-two-thirds",
+          label: {
+            text: "Enter your address"
           }
-        },
-        {
-          value: "no",
-          text: "No, I'm homeless"
-        }
-      ]
-    }) }}
-    
-          {{ govukButton({
-            text: "Continue",
-            href: "/forms/housing/CBLcontact.html",
-            classes: "button-primary"
-          }) }}
+        }) }}
+        {% endset -%}
+        
+        
+        {{ govukRadios({
+          idPrefix: "has-add-conditional",
+          name: "has-add",
+          fieldset: {
+            legend: {
+              text: "Do you have a fixed address?",
+              isPageHeading: true,
+              classes: "govuk-fieldset__legend--m"
+            }
+          },
+          hint: {
+            text: "This is where you live now, even if you are living with friends, family or somewhere else."
+          },
+          items: [
+            {
+              value: "yes",
+              text: "Yes",
+              conditional: {
+                html: postcodeHtml
+              }
+            },
+            {
+              value: "no",
+              text: "No, I'm homeless"
+            }
+          ]
+        }) }}
+        
+              {{ govukButton({
+                text: "Continue",
+                href: "/forms/housing/CBLcontact.html",
+                classes: "button-primary"
+              }) }}
+      </form>
     </div>
+</div>
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>the actual single checkbox doesn't work (no feedback provided)</li>
+      <li>we could use radio buttons as above with a question - to be validated by Housing and Sharon</li>
+    </ul>
+</div>
+<div class="IT-notes-box">
+  <h3 class="govuk-heading-s">IT notes:</h3>
+  <p>The postcode is not validated at the moment. As the address could be used to contact the user, I assume we need to validate the postcode + use a postcode lookup and the user needs to select their address?</p>
+  <p>But then, the applicant could potentially live anywhere at the moment. Should we just use a textarea with free text? (in case it's not a UK address)</p>
 </div>
 
 {% endblock %}
