--- a/app/views/forms/housing/CBLaboutyou.html
+++ b/app/views/forms/housing/CBLaboutyou.html
@@ -20,7 +20,7 @@
 
       {{ govukInput({
         label: {
-          text: "Your first name"
+          text: "First name"
         },
         id: "first-name-applicant",
         name: "first-name-applicant",
@@ -29,7 +29,7 @@
 
       {{ govukInput({
         label: {
-          text: "Your last name"
+          text: "Last name"
         },
         id: "last-name-applicant",
         name: "last-name-applicant",
@@ -38,7 +38,7 @@
 
       {{ govukInput({
         label: {
-          text: "Your telephone/mobile number"
+          text: "Telephone/mobile number"
         },
         id: "telephone-number",
         name: "telephone-number",
@@ -75,6 +75,7 @@
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>we don't capture the gender of the applicant, what if it's a woman and she is pregnant?</li>
+      <li>Should email be optional?</li>
       <li>as the form is really long, we should probably group all these questions on one page as they are easy and all related to the applicant</li>
     </ul>
 </div>
