make some changes to size of input, typos in comments

--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -29,7 +29,7 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>this is a possible information page to add to provide guidance about the pages coming after (info about each person living with the main applicant</li>
+      <li>this is a possible information page to add to provide guidance about the pages coming after (info about each person living with the main applicant)</li>
       <li>the content should be drafted by sharon and agreed by Housing - Usability testing would help to see what is needed</li>
       <li> we could add guidance about the meaning of joint applicant? pregnancy? adult / child status  for 16-18</li>
     </ul>
