--- a/app/views/forms/housing/CBLpostcode.html
+++ b/app/views/forms/housing/CBLpostcode.html
@@ -68,7 +68,7 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>the actual single checkbox doesn't work (no feedback provided)</li>
+      <li>the actual single checkbox doesn't work (no visual feedback provided)</li>
       <li>we could use radio buttons as above with a question - to be validated by Housing and Sharon</li>
     </ul>
 </div>
