--- a/app/views/forms/housing/CBLaboutyou.html
+++ b/app/views/forms/housing/CBLaboutyou.html
@@ -75,7 +75,7 @@
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>we don't capture the gender of the applicant, what if it's a woman and she is pregnant?</li>
-      <li>Should email be optional?</li>
+      <li>should email be optional?</li>
       <li>as the form is really long, we should probably group all these questions on one page as they are easy and all related to the applicant</li>
     </ul>
 </div>
