--- a/app/views/forms/housing/CBLadd-children.html
+++ b/app/views/forms/housing/CBLadd-children.html
@@ -385,7 +385,7 @@
 
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-         <p>Wording would probably change - need to be seen by Sharon and approved by housing</p>
+         <p>Wording would probably change - need to be seen by Sharon and approved by Housing</p>
       </div>
     </div>
 </div>
