--- a/app/views/forms/housing/CBLjoint.html
+++ b/app/views/forms/housing/CBLjoint.html
@@ -8,7 +8,7 @@
 {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
         Choice Based Letting
       </h1>
@@ -20,6 +20,7 @@
 {{ govukTextarea({
   id: "joint",
   name: "joint",
+  classes: "govuk-!-width-two-thirds",
   label: {
     text: "Enter their name"
   }
