--- a/app/views/forms/education/info.html
+++ b/app/views/forms/education/info.html
@@ -9,9 +9,12 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-l">
-          If you catchment school is full
+        <h1 class="govuk-heading-l">
+            Apply online for primary 1 August 2019
         </h1>
+      <h2 class="govuk-heading-m">
+          If you catchment school is full
+        </h2>
       <p>We need some further information in case your catchment school is full.</p>
       <p>We’ll ask you to provide proof of these answers later in the process.</p>
 
