--- a/app/views/forms/education/medical-details.html
+++ b/app/views/forms/education/medical-details.html
@@ -9,7 +9,9 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-
+        <h1 class="govuk-heading-l">
+            Apply online for primary 1 August 2019
+        </h1>
         <form class="form" method="post">
         {% from "textarea/macro.njk" import govukTextarea %}
 
@@ -19,7 +21,7 @@
           value: data['more-detail'],
           label: {
             text: "Give details of their medical condition",
-            classes: "govuk-!-font-size-36"
+            classes: "govuk-!-font-size-27"
           }
         }) }}
 
