--- a/app/views/forms/education/postcode-with-address.html
+++ b/app/views/forms/education/postcode-with-address.html
@@ -8,10 +8,13 @@
 {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          Property
+          Apply online for primary 1 August 2019
       </h1>
+      <h2 class="govuk-heading-m">
+          Property
+      </h2>
     
 
     {% from "input/macro.njk" import govukInput %}
