--- a/app/views/forms/education/postcode.html
+++ b/app/views/forms/education/postcode.html
@@ -10,8 +10,11 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          Property postcode
+          Apply online for primary 1 August 2019
       </h1>
+      <h2 class="govuk-heading-m">
+          Property postcode
+      </h2>
 
       <form class="form" method="post">
       {% from "warning-text/macro.njk" import govukWarningText %}
