--- a/app/views/forms/education/child-dob.html
+++ b/app/views/forms/education/child-dob.html
@@ -9,6 +9,9 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
+        <h1 class="govuk-heading-l">
+            Apply online for primary 1 August 2019
+        </h1>
 
       <form class="form" method="post">
       {% from "date-input/macro.njk" import govukDateInput %}
@@ -20,7 +23,7 @@
           legend: {
             text: "Child date of birth",
             isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
+            classes: "govuk-fieldset__legend--m"
           }
         },
         hint: {
