--- a/app/views/forms/education/declaration.html
+++ b/app/views/forms/education/declaration.html
@@ -9,9 +9,9 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-l">
-          Apply online for primary 1 registration
-      </h1>
+        <h1 class="govuk-heading-l">
+            Apply online for primary 1 August 2019
+        </h1>
 
       <h2 class="govuk-heading-m">Declaration</h2>
      <p>There will be a text about declaring you are saying the truth, might have GDPR declaration too - to be checked</p>
