--- a/app/views/forms/education/defer.html
+++ b/app/views/forms/education/defer.html
@@ -9,7 +9,9 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-
+        <h1 class="govuk-heading-l">
+            Apply online for primary 1 August 2019
+        </h1>
       <form class="form" method="post">
       {% from "radios/macro.njk" import govukRadios %}
 
@@ -22,7 +24,7 @@
           legend: {
             text: "Do you want to defer your child starting school?",
             isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
+            classes: "govuk-fieldset__legend--m"
           }
         },
         items: [
