--- a/app/views/forms/education/moving.html
+++ b/app/views/forms/education/moving.html
@@ -9,6 +9,9 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
+        <h1 class="govuk-heading-l">
+            Apply online for primary 1 August 2019
+        </h1>
 
       <form class="form" method="post">
       {% from "radios/macro.njk" import govukRadios %}
@@ -22,7 +25,7 @@
           legend: {
             text: "Are you currently living at a different address?",
             isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
+            classes: "govuk-fieldset__legend--m"
           }
         },
         items: [
