--- a/app/views/forms/education/nursery.html
+++ b/app/views/forms/education/nursery.html
@@ -9,30 +9,42 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
+        <h1 class="govuk-heading-l">
+            Apply online for primary 1 August 2019
+        </h1>
       <form class="form" method="post">
 
           {% from "radios/macro.njk" import govukRadios %}
+          {% from "input/macro.njk" import govukInput %}
+
+
+          {% set othernurseryHtml %}
+          {{ govukInput({
+            id: "other-nursery",
+            name: "other-nursery",
+            classes: "govuk-!-width-two-thirds",
+            label: {
+              text: "Enter the name of the nursery"
+            }
+          }) }}
+          {% endset -%}
+
 
           {{ govukRadios({
-            classes: "govuk-radios",
-            idPrefix: "nursery",
+            idPrefix: "nursery-conditional",
             name: "nursery",
             value: data['nursery'],
             fieldset: {
               legend: {
                 text: "What nursery is your child attending?",
                 isPageHeading: true,
-                classes: "govuk-fieldset__legend--l"
+                classes: "govuk-fieldset__legend--m"
               }
             },
             items: [
               {
                 value: "My Child is not attending nursery",
                 text: "My child is not attending nursery"
-              },
-              {
-                value: "My child is at a nursery but not in East Renfrewshire",
-                text: "My child is at a nursery but not in East Renfrewshire"
               },
               {
                 value: "Name of ERC nursery 1",
@@ -53,6 +65,13 @@
               {
                 value: "Name of ERC nursery 5",
                 text: "Name of ERC nursery 5"
+              },
+              {
+                value: "My child is at a nursery but not in East Renfrewshire",
+                text: "My child is at a nursery but not in East Renfrewshire",
+                conditional: {
+                  html: othernurseryHtml
+                }
               }
             ]
           }) }}
