--- a/app/views/forms/education/school-2nd.html
+++ b/app/views/forms/education/school-2nd.html
@@ -8,7 +8,10 @@
 {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
+        <h1 class="govuk-heading-l">
+            Apply online for primary 1 August 2019
+        </h1>
       <form class="form" method="post">
           {% from "radios/macro.njk" import govukRadios %}
 
@@ -20,7 +23,7 @@
               legend: {
                 text: "Select preferred alternative school",
                 isPageHeading: true,
-                classes: "govuk-fieldset__legend--l"
+                classes: "govuk-fieldset__legend--m"
               }
             },
             items: [
