--- a/app/views/forms/housing/CBLadd-person-alt.html
+++ b/app/views/forms/housing/CBLadd-person-alt.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        Choice Based Letting
+        Apply online for Housing
       </h1>
       <p>Enter each person who will be living with you.</p>
       <h2 class="govuk-heading-m">
