--- a/app/views/forms/housing/CBLrecourse.html
+++ b/app/views/forms/housing/CBLrecourse.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          Choice Based Letting
+          Apply online for Housing
       </h1>
       <form class="form" method="post">
       {% from "radios/macro.njk" import govukRadios %}
